# yomishi

./: .dprint.json  .gitignore  Cargo.toml  README.md  build_ex.sh  build_ts_proto.sh  package-lock.json  package.json
proto/yomishi/: anki.proto  config.proto  scan.proto
yomishi-core/: Cargo.toml  build.rs  config_keys.toml
yomishi-core/config/: Cargo.toml  build.rs
yomishi-core/config/src/: lib.rs
yomishi-core/config_gen/: Cargo.toml
yomishi-core/config_gen/src/: generator.rs  generator_ts.rs  lib.rs  loader.rs  main.rs
yomishi-core/local_server/: Cargo.toml
yomishi-core/local_server/src/: connect.rs  main.rs
yomishi-core/proto/: Cargo.toml  build.rs
yomishi-core/proto/src/: lib.rs
yomishi-core/proto_gen/: Cargo.toml
yomishi-core/proto_gen/src/: lib.rs
yomishi-core/src/: anki.rs  anki_connect.rs  backend.rs  config.rs  database.rs  deinflector.rs  dict.rs  dict_parser.rs  dictionary.rs  error.rs  flashcard.rs  html.rs  japanese.rs  lib.rs  main.rs  protos.rs  scan.rs  services.rs
yomishi-core/src/anki/: connect.rs  service.rs
yomishi-core/src/anki/connect/: actions.rs
yomishi-core/src/anki_connect/: actions.rs
yomishi-core/src/backend/: anki.rs  config.rs  scan.rs
yomishi-core/src/database/: config.rs  create.sql  create.surql  dictionaries.rs  index.sql  kanjis.rs  kanjis_meta.rs  slow_inmem.rs  tags.rs  terms.rs  terms_meta.rs
yomishi-core/src/database/terms/: lookup.surql
yomishi-core/src/deinflector/: step_search.rs
yomishi-core/src/dict/: html.rs  parser.rs
yomishi-core/src/dict/html/: templates.hbs
yomishi-core/src/dict/parser/: kanji.rs  kanji_meta.rs  structured.rs  tag.rs  term.rs  term_meta.rs
yomishi-core/src/dictionary/: search.rs
yomishi-core/src/html/: templates.hbs
yomishi-core/src/japanese/: ruby.rs
yomishi-core/src/scan/: search.rs  service.rs
yomishi-core/src/services/: anki.rs  config.rs  scan.rs
yomishi-styles/: tag-colors.scss
yomishi-ts/: bundle_svelte.mjs  bundle_ts.mjs  config.ts  page.html  rpc_transport.ts  tsconfig.json
yomishi-ts/configuration/: ConfigScaffold.svelte  ConfigurationPage.svelte  RemoteSections.svelte  Section.svelte  config-data-store.ts  config-helper-store.ts  config-store.ts  index.ts  scaffold-context.ts
yomishi-ts/configuration/engines/: cached.ts  config-rpc.ts  index.ts  local-storage.ts
yomishi-ts/configuration/tiles/: DictListSetting.svelte  DimensionsSetting.svelte  FieldMapSetting.svelte  NumberSetting.svelte  SelectSetting.svelte  SettingElement.svelte  SettingTile.svelte  TextSetting.svelte  ToggleSetting.svelte  store-debounce.ts
yomishi-ts/extension/: browser-extension.ts
yomishi-ts/extension/action-popup/: ActionPopUp.svelte  index.ts
yomishi-ts/extension/chrome/: manifest.json
yomishi-ts/extension/content-script/: content-script.ts  frames.ts
yomishi-ts/extension/offscreen/: client.ts  clipboard.ts  index.ts  offscreen.html  receiver.ts
yomishi-ts/extension/popup/: PopUp.svelte  index.ts
yomishi-ts/extension/worker/: anki.ts  client.ts  index.ts  receiver.ts
yomishi-ts/glossary/: GlossaryList.svelte  RubyRender.svelte  TagList.svelte  glolist.css
yomishi-ts/rpc/: address-manager.ts  config-client.ts  transport.ts
yomishi-ts/rpc/chrome-simple/: index.ts
yomishi-ts/rpc/grcp/: generic-client.ts
