[package]
name = "yomishi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
yomishi_config.workspace = true
yomishi_proto.workspace = true

# remote
futures = "0.3.28"
handlebars = "4.4.0"
prost = "0.12.1"
quick-xml = "0.30.0"
regex = "1.9"
reqwest = { version = "0.11.20", features = ["json"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] } # TODO: don't use tokio in core
zip = "0.6.6"
