[package]
name = "yomishi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
yomishi_config.workspace = true
yomishi_proto.workspace = true

# remote
futures = "0.3.28"
handlebars = "6.0.0"
prost = "0.13.1"
quick-xml = "0.36.1"
regex = "1.9"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
strum = { version = "0.26.2", features = ["derive"] }
surrealdb-nightly = { version = "2.0.20240807", default-features = false, features = ["kv-rocksdb"] } # TODO: WASM - use kv-indxdb
zip = "2.1.6"
