[package]
name = "yomishi_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }

[build-dependencies]
yomishi_config_gen.workspace = true
