[package]
name = "yomishi_local_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
hyper = { version = "0.14", features = ["full"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
yomishi.workspace = true
yomishi_proto.workspace = true
